<?xml version="1.0"?>
<package format="3">
  <name>depthai-ros</name>
  <version>2.12.2</version>
  <description>The depthai-ros package</description>

  <author>Adam Serafin</author>
  <author>Sachin Guruswamy</author>

  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>ros_environment</build_depend>
  <exec_depend>depthai</exec_depend>
  <exec_depend>depthai_ros_msgs</exec_depend>
  <exec_depend>depthai_bridge</exec_depend>
  <exec_depend>depthai_examples</exec_depend>
  <exec_depend>depthai_ros_driver</exec_depend>
  <exec_depend>depthai_descriptions</exec_depend>
  <exec_depend>depthai_filters</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
